<resources>
    <string name="app_name">Rateopolis</string>
    <string name="title_activity_maps" translatable="false">MapsActivity</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign up</string>
    <string name="login">Login</string>
    <string name="please_login_to_your_account_or_create_a_new_one">Please login to your account or create a new one</string>
    <string name="welcome">Welcome</string>
    <string name="error">Error</string>
    <string name="please_fill_all_fields">Please fill all fields</string>
    <string name="success">Success</string>
    <string name="select_a_category">Select a category or shake your phone for random selection</string>
    <string name="events">Events</string>
    <string name="stores">Stores</string>
    <string name="if_you_want_to_select_another_location_use_the_dropdown_menu">If you want to select another location, use the dropdown menu</string>
    <string name="choose_one_of_the_following_activities">Choose one of the following activities</string>
    <string name="select_a_city">Select a city</string>
    <string name="your_current_location_is">Your current location is:</string>
    <string name="cinema">Cinema</string>
    <string name="concert">Concert</string>
    <string name="theater">Theater</string>
    <string name="coffee">Coffee</string>
    <string name="restaurant">Restaurant</string>
    <string name="club">Club</string>
    <string name="this_location_is_not_supported_yet">This location is not supported yet</string>
    <string name="please_select_a_movie">Please select a movie</string>
    <string name="please_select_a_concert">Please select a concert</string>
    <string name="please_select_a_show">Please select a show</string>
    <string name="please_select_a_night_club">Please select a night club</string>
    <string name="please_select_a_coffee_shop">Please select a coffee shop</string>
    <string name="please_select_a_restaurant">Please select a restaurant</string>
    <string name="say_a_title">Say a title</string>
    <string name="hour">Hour:</string>
    <string name="address">Address:</string>
    <string name="enter_your_rating">Enter your rating</string>
    <string name="show_ratings">Show ratings</string>
    <string name="show_on_map">Show on map</string>
    <string name="add_some_comments_about_your_experience">Add some comments about your experience</string>
    <string name="submit_review">Submit review</string>
    <string name="area">Area:</string>
    <string name="rating_saved_successfully">Rating saved successfully!</string>
    <string name="you_have_already_reviewed_this_activity">You have already reviewed this activity.</string>
    <string name="today_s_average_rating">Today\'s average rating:</string>
    <string name="there_are_no_reviews">There are no reviews</string>
    <string name="attention">Attention</string>
    <string name="your_GPS_is_disabled_please_enable_it">Your GPS is disabled, please enable it</string>
    <string name="temperature_sensor_is_not_available">Temperature sensor is not available</string>
    <string name="shake_event_detected">Shake event detected</string>
</resources>